fixed layout issue

--- a/src/assets/css/styling.css
+++ b/src/assets/css/styling.css
@@ -18,8 +18,8 @@ html {
     right: 0;
     bottom: 0;
     z-index: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 .grid-hidden {
     background-color: #fff !important;
